--- a/app/src/main/res/layout/fragment_default.xml
+++ b/app/src/main/res/layout/fragment_default.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".model.DefaultFragment">
+    tools:context=".ui.DefaultFragment">
 
     <TextView
         android:layout_width="wrap_content"
