--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.TextWatcherFragment">
 
-
     <Button
         android:id="@+id/buttonShowToast"
         android:layout_width="wrap_content"
@@ -34,9 +33,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="center"
-            android:hint="Add your text here..."
+            android:hint="@string/add_your_text_here"
             android:inputType="textPersonName" />
-
     </LinearLayout>
 
     <TextView
